// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are existing saved payments 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Saved Payments
  </h1>
  <div
    className="content"
  >
    <mock-PaymentCard
      details={
        Object {
          "expirationDate": "12/12/2022",
          "maskedCC": "1234",
          "type": "VI",
        }
      }
      payment_method_code="braintree"
      public_hash="78asfg87ibafv"
    />
  </div>
</div>
`;

exports[`renders correctly when there are no existing saved payments 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Saved Payments
  </h1>
  <div
    className="content"
  />
</div>
`;
